# qrCodeGenerator

./: README.md
qrcode_gen/: Cargo.toml
qrcode_gen/src/: main.rs
