[package]
authors = ["Alexander Lorei"]
description = "A simple QR code generator written in Rust."
license = "GPL-3.0"
name = "qrcodegen"
version = "1.0.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.3.0", features = ["derive"] }

qrcode-generator = "4.1.8"
substring = "1.4.5"
